# LogDoctor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
logdoctor/: __init__.py  cli.py  config.py  detector.py  models.py  scanner.py
logdoctor/output/: console.py  json_report.py  markdown.py
logdoctor/parsers/: __init__.py  base.py  docker.py  generic.py  nginx.py  pacman.py  python_traceback.py
logdoctor/rules/: default_rules.yml  docker_rules.yml  nginx_rules.yml  pacman_rules.yml  python_rules.yml
logdoctor/utils/: __init__.py  file_utils.py  perf.py  time_utils.py
scripts/: generate_big_log.py
tests/: __init__.py  test_detector.py  test_parsers.py  test_reports.py  test_scanner.py
