[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logdoctor"
version = "0.1.0"
description = "Terminal utility for log analysis, error detection, and reporting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "erafox" }]
keywords = ["logs", "devops", "cli", "analysis", "nginx", "docker", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Logging",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12.0,<1.0",
    "rich>=13.0,<14.0",
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
]

[project.scripts]
logdoctor = "logdoctor.cli:app"

[project.urls]
Repository = "https://github.com/erafox/logdoctor"

[tool.hatch.build.targets.wheel]
packages = ["logdoctor"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["TC003", "TC001", "TC002"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
